--- a/notebook_a2_regresssao_logistica.ipynb
+++ b/notebook_a2_regresssao_logistica.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 59,
    "id": "b4f8348a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 60,
    "id": "4e65cb18",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 61,
    "id": "bd38f38a",
    "metadata": {
     "scrolled": true
@@ -266,7 +266,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 62,
    "id": "7d77c6ea",
    "metadata": {
     "scrolled": false
@@ -459,7 +459,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 63,
    "id": "0f6d0ccf",
    "metadata": {
     "scrolled": false
@@ -493,7 +493,7 @@
        "<AxesSubplot:xlabel='0', ylabel='ID'>"
       ]
      },
-     "execution_count": 448,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 64,
    "id": "f1666b3f",
    "metadata": {
     "scrolled": false
@@ -561,7 +561,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 447,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 65,
    "id": "ec05e604",
    "metadata": {
     "scrolled": true
@@ -812,7 +812,7 @@
        "[30000 rows x 11 columns]"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 66,
    "id": "41654f2a",
    "metadata": {
     "scrolled": false
@@ -934,7 +934,7 @@
        "[30000 rows x 1 columns]"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 67,
    "id": "f3a9d92b",
    "metadata": {},
    "outputs": [],
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 68,
    "id": "e041f15f",
    "metadata": {
     "scrolled": true
@@ -982,16 +982,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1],\n",
-       "       [1],\n",
-       "       [0],\n",
+       "array([[20000, 2, 2, ..., -1, -2, -2],\n",
+       "       [120000, 2, 2, ..., 0, 0, 2],\n",
+       "       [90000, 2, 2, ..., 0, 0, 0],\n",
        "       ...,\n",
-       "       [1],\n",
-       "       [1],\n",
-       "       [1]], dtype=object)"
+       "       [30000, 1, 2, ..., -1, 0, 0],\n",
+       "       [80000, 1, 3, ..., 0, 0, -1],\n",
+       "       [50000, 1, 2, ..., 0, 0, 0]], dtype=object)"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,23 +1010,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 69,
    "id": "77f88dab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[20000, 2, 2, ..., -1, -2, -2],\n",
-       "       [120000, 2, 2, ..., 0, 0, 2],\n",
-       "       [90000, 2, 2, ..., 0, 0, 0],\n",
+       "array([[1],\n",
+       "       [1],\n",
+       "       [0],\n",
        "       ...,\n",
-       "       [30000, 1, 2, ..., -1, 0, 0],\n",
-       "       [80000, 1, 3, ..., 0, 0, -1],\n",
-       "       [50000, 1, 2, ..., 0, 0, 0]], dtype=object)"
+       "       [1],\n",
+       "       [1],\n",
+       "       [1]], dtype=object)"
       ]
      },
-     "execution_count": 414,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 70,
    "id": "32758b3d",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "5525e270",
    "metadata": {},
    "outputs": [],
@@ -1078,12 +1078,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "e9b243e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accuracy(y_previsto, y_real): # Cria a função para medir a acurácia\n",
+    "def acuracia(y_previsto, y_real): # Cria a função para medir a acurácia\n",
     "    \"\"\"\n",
     "    Recebe o nosso vetor y_real com os resultados reais e o vetor com os resultados calculados\n",
     "    \"\"\"\n",
@@ -1095,121 +1095,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "9026a056",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(X, W, b):\n",
-    "    Z = np.dot(W.T, X) + b\n",
-    "    Z = Z.astype(float)\n",
-    "    y_previsto = sigmoide(Z).astype(float)\n",
-    "    return y_previsto.astype(float)"
+    "def prever(X, W, b): # Cria a função para fazer a previsão dos resultados, dados os nossos estimadores calculados\n",
+    "    Z = np.dot(W.T, X) + b # Cria a matriz com os nossos dados de entrada multiplicados pelos nossos estimadores (somado de b, assim como na nossa formula)\n",
+    "    Z = Z.astype(float) # Converte o tipo de dado\n",
+    "    y_previsto = sigmoide(Z).astype(float) # Aplica a função logística, como já definimos anteriormente\n",
+    "    return y_previsto.astype(float) # Retorna o resultado previsto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "9bd98fa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(x_real, y_real, taxa_de_aprendizagem=0.01, iteracoes=1000):\n",
+    "def train(x_real, y_real, taxa_de_aprendizagem=0.01, iteracoes=1000): # Cria a função para calcular \"treinar\" nosso estimadores\n",
     "    \"\"\"\n",
     "    X: matriz n x m (n variáveis independentes e m observações)\n",
     "    y: vetor 1 x m (vetor coluna transposto)\n",
     "    \"\"\"\n",
-    "    x_real = x_real.astype(float)\n",
-    "    y_real = y_real.astype(float)\n",
+    "    x_real = x_real.astype(float) # Converte o tipo de dado\n",
+    "    y_real = y_real.astype(float) # Converte o tipo de dado\n",
     "    \n",
-    "    n = x_real.shape[0]\n",
-    "    m = x_real.shape[1]\n",
+    "    n = x_real.shape[0] # Identifica o número de linhas da matriz x_real\n",
+    "    m = x_real.shape[1] # Identifica o número de colunas da matriz x_real\n",
     "    \n",
-    "    W = np.zeros((m, 1)).astype(float)\n",
-    "    b = 0\n",
+    "    W = np.zeros((n, 1)).astype(float) # Cria o vetor com os estimadores (nossos \"betas\") com valor inicial 0\n",
+    "    b = 0 # Cria o \"beta de índice 0\" com valor inicial 0\n",
     "    \n",
-    "    perdas = []\n",
-    "    for i in range(iteracoes):\n",
-    "        Z = np.dot(W.T, x_real) + b\n",
-    "        Z = Z.astype(float)\n",
-    "\n",
-    "        y_previsto = sigmoide(Z)\n",
-    "\n",
+    "    perdas = [] # Cria uma lista vazia para guardar o resultados das perdas\n",
+    "    for i in range(iteracoes): # Cria um laço para repetir a função o número desejado de vezes para melhorar os estimadores\n",
+    "        Z = np.dot(W.T, x_real) + b # Aplica os estimadores na matriz com os variáveis independentes reais, como na nossa fórmula\n",
+    "        Z = Z.astype(float) # Converte o tipo do dado\n",
+    "        y_previsto = sigmoide(Z) # Aplica a função logística e salva no vetor de resultados previstos com os nossos estimadores atuais\n",
+    "        \n",
+    "        # Aplica a nossa função de calculo da perda (com o logarítmo da verossimilhança)\n",
     "        perda = -1/m * np.sum((y_real*np.log(y_previsto  + 0.000001) + ((1 - y_real))*np.log((1 - y_previsto + 0.000001))))\n",
     "        \n",
-    "        perdas.append(perda)\n",
+    "        perdas.append(perda) # Adiciona a perda atual calculada a lista de perdas\n",
     "        \n",
-    "        dW = np.dot(x_real, (y_previsto - y_real).T)/m\n",
-    "        db = np.mean(y_previsto - y_real)\n",
+    "        dW = np.dot(x_real, (y_previsto - y_real).T)/m # Aplica a derivada da verossimilhanca nos \"betas\"\n",
+    "        db = np.mean(y_previsto - y_real) # Aplica a derivada da verossimilhanca no \"beta de índice 0\"\n",
     "        \n",
+    "        # Converte o tipo de dado\n",
     "        dW = dW.astype(float)\n",
     "        db = db.astype(float)\n",
     "        \n",
+    "        # Atualiza os estimadores com a derivadas calculadas\n",
     "        W -= taxa_de_aprendizagem*dW\n",
     "        b -= taxa_de_aprendizagem*db\n",
     "                   \n",
-    "    return {'W': W, 'b': b, 'Perdas': perdas}"
+    "    return {'W': W, 'b': b, 'Perdas': perdas} # Retorna os estimadores que obtivemos como resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83fa0718",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcb12f87",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 85,
    "id": "c65da50e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'reshape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-456-c4599eeee003>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# print('X shape', X.shape)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Anaconda\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5463\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5464\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5465\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5466\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5467\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'reshape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia 77.88%\n"
      ]
     }
    ],
    "source": [
-    "X_train = x_real\n",
-    "y_train = y_real\n",
+    "# X_train = x_real\n",
+    "# y_train = y_real\n",
     "\n",
-    "X = X_train.T\n",
-    "Y = y_train.reshape(1, -1)\n",
+    "X = x_real.T # Transpõe a matriz com as variáveis independentes\n",
+    "Y = y_real.reshape(1, -1) # Transforma o formato do vetor com os resultados reais\n",
     "\n",
-    "# print('X shape', X.shape)\n",
-    "# print('Y shape', Y.shape)\n",
+    "resultado = train(X, Y, taxa_de_aprendizagem=0.2, iteracoes=1000) # Calculando os estimadores \"betas\"\n",
     "\n",
-    "model = train(X, Y, taxa_de_aprendizagem=0.2, iteracoes=1000)\n",
-    "\n",
-    "\n",
-    "W = model['W']\n",
-    "b = model['b']\n",
+    "b = resultado['b'] # Salva o resultado do estimado \"beta de índice 0\"\n",
+    "B = resultado['W'] # Salva o resultado do restante dos estimadores\n",
     "\n",
     "\n",
-    "y_previsto = predict(X_train.T, W, b)\n",
-    "y_true = y_train.reshape(1, -1)\n",
+    "y_previsto = predict(X_train.T, B, b) # Cria um vetor com os resultados estimados de acordo com os nossos estimadores calculados\n",
+    "y_real_reshape = y_real.reshape(1, -1) # Altera o formato (reshape) do vetor com os resultados originais \n",
     "\n",
-    "acc = accuracy(y_previsto, y_true)\n",
-    "print('accuracy {:.2f}%'.format(acc*100))\n",
-    "#pd.Series(model['loss']).plot()\n",
-    "print(model[\"W\"][1,-1])\n"
+    "acc = acuracia(y_previsto, y_real_reshape) # Calcula acurácia da nossa previsão\n",
+    "print(f'Acurácia {(acc*100)}%') # Exibe o resultado da acurácia"
    ]
   },
   {
